--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,31 +1,93 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-@font-face {
-  font-family: caviardreams;
-  src: url(../../theme/dist/fonts/Poppins-Regular.ttf);
+:root {
+  --dark: #363636;
+  --light-dark: #424141;
+  --purple: #610c9f;
+  --purple-darkness: rgb(85, 9, 139);
+  --purple-light: rgb(121, 14, 197);
+  --purple-lighter: rgb(200, 19, 197);
 }
-body {
-  font-family: "caviardreams", sans-serif;
-}
+
+
 
 .navbar-plataforma {
   align-content: end;
   flex-direction: column;
   flex-wrap: wrap;
 }
+* {
+  font-family: "Montserrat", sans-serif;
+  transition: 0.2s all !important;
+}
+body {
+  background-color: #fcf5ed;
+}
 nav {
-  background-color: #fff306;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  background-color: var(--dark);
+
+}
+.navbar-toggler,
+.navbar-toggler:active,
+.navbar-toggler:focus {
+  border: none !important;
+  box-shadow: none;
+}
+.dropdown-menu {
+  background-color: var(--dark) !important;
+  border: none;
+}
+.dropdown-item {
+  color: white;
+}
+.dropdown-divider {
+  background-color: var(--purple-light);
+}
+.menu-carrinho {
+  min-width: 20rem !important;
+}
+.nav-link {
+  color: white;
+}
+.text-purple-light {
+  color: var(--purple-light);
+}
+.nav-link:hover {
+  color: var(--purple-light) !important;
 }
 #pesquisa_curso {
   border-radius: 20px;
-  background-color: #fffa71;
+  background-color: var(--light-dark);
   border: none;
+
   color: white;
+}
+.btn-purple {
+  background-color: var(--purple);
+}
+.btn-purple:hover,
+.btn-purple:focus,
+.btn-purple:active {
+  box-shadow: 1px 4px 10px 2px rgba(97, 12, 159, 0.75);
+  -webkit-box-shadow: 1px 4px 10px 2px rgba(97, 12, 159, 0.75);
+  -moz-box-shadow: 1px 4px 10px 2px rgba(97, 12, 159, 0.75);
+}
+.btn-purple:hover {
+  background-color: var(--purple-darkness);
+}
+.btn-purple:active {
+  background-color: var(--purple-light) !important;
+  border: none !important;
+}
+.text-purple {
+  color: var(--purple);
 }
 #pesquisa_curso::placeholder {
   color: white;
 }
 #pesquisa_curso:focus {
-  box-shadow: 0 0 0 0.25rem rgba(234, 185, 52, 0.25);
+  box-shadow: 1px 1px 4px 3px rgba(97, 12, 159, 0.54);
+  -webkit-box-shadow: 1px 1px 4px 3px rgba(97, 12, 159, 0.54);
+  -moz-box-shadow: 1px 1px 4px 3px rgba(97, 12, 159, 0.54);
 }
 .form-pesquisa {
   flex-grow: 4;
