--- a/public/css/login.css
+++ b/public/css/login.css
@@ -4,6 +4,14 @@ body {
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  background-color: #f0f0f3;
+  background-image: radial-gradient(
+      at 67% 33%,
+      hsl(254, 57%, 59%) 0,
+      transparent 59%
+    ),
+    radial-gradient(at 82% 65%, hsl(210.95, 87%, 78%) 0, transparent 55%),
+    radial-gradient(at 28% 65%, hsl(252, 87%, 78%) 0, transparent 55%);
 }
 
 .form {
@@ -114,7 +122,7 @@ body {
 }
 .input:focus,
 .input:valid {
-  border: 1px solid var(--purple-light)!important;
+  border: 1px solid var(--purple-light) !important;
   box-shadow: 1px 1px 4px 3px rgba(97, 12, 159, 0.54);
   -webkit-box-shadow: 1px 1px 4px 3px rgba(97, 12, 159, 0.54);
   -moz-box-shadow: 1px 1px 4px 3px rgba(97, 12, 159, 0.54);
