--- a/public/css/style.css
+++ b/public/css/style.css
@@ -112,8 +112,22 @@ nav {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 
 }
+.text-justify{
+  text-align: justify;
+}
 
-#liveToast,#liveToast2 {
+.img-produto-id {
+
+  height: 50vh;
+  width: 100%;
+  object-fit: contain;
+  object-position: center;
+  margin-bottom: 2em;
+  border-radius: 20px;
+}
+
+#liveToast,
+#liveToast2 {
   background-color: var(--dark) !important;
   color: white;
   box-shadow: 1px 1px 4px 3px rgba(97, 12, 159, 0.54);
